@@ -3,8 +3,6 @@ package acceptance.report;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -40,7 +38,7 @@ class GetCustomAttributeValuesForReportAccTest extends AbstractReportAccTest {
     List<String> values =
         MONITOR_SERVICE
             .createWorkbasketReportBuilder()
-            .workbasketIdIn(Collections.singletonList("WBI:000000000000000000000000000000000001"))
+            .workbasketIdIn(List.of("WBI:000000000000000000000000000000000001"))
             .listCustomAttributeValuesForCustomAttributeName(TaskCustomField.CUSTOM_2);
 
     assertThat(values).containsExactlyInAnyOrder("Vollkasko", "Teilkasko");
@@ -52,7 +50,7 @@ class GetCustomAttributeValuesForReportAccTest extends AbstractReportAccTest {
     List<String> values =
         MONITOR_SERVICE
             .createWorkbasketReportBuilder()
-            .domainIn(Collections.singletonList("DOMAIN_A"))
+            .domainIn(List.of("DOMAIN_A"))
             .listCustomAttributeValuesForCustomAttributeName(TaskCustomField.CUSTOM_16);
     assertThat(values).hasSize(26);
   }
@@ -76,14 +74,13 @@ class GetCustomAttributeValuesForReportAccTest extends AbstractReportAccTest {
   @WithAccessId(user = "monitor")
   @Test
   void testGetCustomAttributeValuesForExcludedClassifications() throws Exception {
-    List<String> domains = Arrays.asList("DOMAIN_A", "DOMAIN_B", "DOMAIN_C");
+    List<String> domains = List.of("DOMAIN_A", "DOMAIN_B", "DOMAIN_C");
 
     List<String> values =
         MONITOR_SERVICE
             .createClassificationCategoryReportBuilder()
             .domainIn(domains)
-            .excludedClassificationIdIn(
-                Collections.singletonList("CLI:000000000000000000000000000000000003"))
+            .excludedClassificationIdIn(List.of("CLI:000000000000000000000000000000000003"))
             .listCustomAttributeValuesForCustomAttributeName(TaskCustomField.CUSTOM_16);
 
     assertThat(values).hasSize(43);
