@@ -6,7 +6,6 @@ import static org.assertj.core.api.Assertions.assertThatThrownBy;
 
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.Iterator;
 import java.util.List;
 import java.util.stream.Stream;
@@ -39,7 +38,7 @@ class GetTaskIdsOfClassificationReportAccTest extends AbstractReportAccTest {
 
   @Test
   void testRoleCheck() {
-    List<SelectedItem> selectedItems = Arrays.asList(L_10000, L_10000_1, L_30000);
+    List<SelectedItem> selectedItems = List.of(L_10000, L_10000_1, L_30000);
 
     ThrowingCallable call =
         () ->
@@ -60,7 +59,7 @@ class GetTaskIdsOfClassificationReportAccTest extends AbstractReportAccTest {
               () ->
                   MONITOR_SERVICE
                       .createClassificationReportBuilder()
-                      .listTaskIdsForSelectedItems(Collections.singletonList(L_10000), timestamp);
+                      .listTaskIdsForSelectedItems(List.of(L_10000), timestamp);
           assertThatCode(callable).doesNotThrowAnyException();
         };
 
@@ -71,7 +70,7 @@ class GetTaskIdsOfClassificationReportAccTest extends AbstractReportAccTest {
   @Test
   void should_SelectCompletedItems_When_CompletedTimeStampIsRequested() throws Exception {
     List<TimeIntervalColumnHeader> columnHeaders = getListOfColumnHeaders();
-    List<SelectedItem> selectedItems = Arrays.asList(L_10000, L_10000_1, L_30000);
+    List<SelectedItem> selectedItems = List.of(L_10000, L_10000_1, L_30000);
 
     List<String> ids =
         MONITOR_SERVICE
@@ -87,7 +86,7 @@ class GetTaskIdsOfClassificationReportAccTest extends AbstractReportAccTest {
   @Test
   void testGetTaskIdsOfClassificationReport() throws Exception {
     List<TimeIntervalColumnHeader> columnHeaders = getListOfColumnHeaders();
-    List<SelectedItem> selectedItems = Arrays.asList(L_10000, L_10000_1, L_30000);
+    List<SelectedItem> selectedItems = List.of(L_10000, L_10000_1, L_30000);
 
     List<String> ids =
         MONITOR_SERVICE
@@ -112,7 +111,7 @@ class GetTaskIdsOfClassificationReportAccTest extends AbstractReportAccTest {
     final List<TimeIntervalColumnHeader> columnHeaders = getListOfColumnHeaders();
 
     final List<SelectedItem> selectedItems =
-        Arrays.asList(
+        List.of(
             new SelectedItem("L10000", "L11000", 0, 0),
             new SelectedItem("L10000", "L11000", Integer.MIN_VALUE, -11));
 
@@ -135,7 +134,7 @@ class GetTaskIdsOfClassificationReportAccTest extends AbstractReportAccTest {
     final List<TimeIntervalColumnHeader> columnHeaders = getListOfColumnHeaders();
 
     final List<SelectedItem> selectedItems =
-        Arrays.asList(L_30000, new SelectedItem("L10000", "L11000", 0, 0));
+        List.of(L_30000, new SelectedItem("L10000", "L11000", 0, 0));
 
     List<String> ids =
         MONITOR_SERVICE
@@ -144,18 +143,17 @@ class GetTaskIdsOfClassificationReportAccTest extends AbstractReportAccTest {
             .inWorkingDays()
             .listTaskIdsForSelectedItems(selectedItems, TaskTimestamp.DUE);
 
-    assertThat(ids).containsExactlyInAnyOrder(
-        "TKI:000000000000000000000000000000000006",
-        "TKI:000000000000000000000000000000000033"
-    );
+    assertThat(ids)
+        .containsExactlyInAnyOrder(
+            "TKI:000000000000000000000000000000000006", "TKI:000000000000000000000000000000000033");
   }
 
   @WithAccessId(user = "monitor")
   @Test
   void testGetTaskIdsOfClassificationReportWithDomainFilter() throws Exception {
     List<TimeIntervalColumnHeader> columnHeaders = getListOfColumnHeaders();
-    List<SelectedItem> selectedItems = Arrays.asList(L_10000, L_10000_1, L_30000);
-    List<String> domains = Arrays.asList("DOMAIN_B", "DOMAIN_C");
+    List<SelectedItem> selectedItems = List.of(L_10000, L_10000_1, L_30000);
+    List<String> domains = List.of("DOMAIN_B", "DOMAIN_C");
 
     List<String> ids =
         MONITOR_SERVICE
