@@ -6,7 +6,6 @@ import static org.assertj.core.api.Assertions.assertThatThrownBy;
 
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.Iterator;
 import java.util.List;
@@ -56,8 +55,7 @@ class ProvideDetailedClassificationReportAccTest extends AbstractReportAccTest {
         MONITOR_SERVICE
             .createClassificationReportBuilder()
             .withColumnHeaders(columnHeaders)
-            .classificationIdIn(
-                Collections.singletonList("CLI:000000000000000000000000000000000001"))
+            .classificationIdIn(List.of("CLI:000000000000000000000000000000000001"))
             .buildDetailedReport();
     assertThat(report).isNotNull();
 
@@ -114,7 +112,7 @@ class ProvideDetailedClassificationReportAccTest extends AbstractReportAccTest {
     Builder builder =
         MONITOR_SERVICE
             .createClassificationReportBuilder()
-            .classificationIdIn(Collections.singletonList("DOES NOT EXIST"));
+            .classificationIdIn(List.of("DOES NOT EXIST"));
     ThrowingCallable test =
         () -> {
           DetailedClassificationReport report = builder.buildDetailedReport();
@@ -331,8 +329,7 @@ class ProvideDetailedClassificationReportAccTest extends AbstractReportAccTest {
   @WithAccessId(user = "monitor")
   @Test
   void testEachItemOfDetailedClassificationReportWithWorkbasketFilter() throws Exception {
-    List<String> workbasketIds =
-        Collections.singletonList("WBI:000000000000000000000000000000000001");
+    List<String> workbasketIds = List.of("WBI:000000000000000000000000000000000001");
     List<TimeIntervalColumnHeader> columnHeaders = getShortListOfColumnHeaders();
 
     DetailedClassificationReport report =
@@ -389,7 +386,7 @@ class ProvideDetailedClassificationReportAccTest extends AbstractReportAccTest {
   @WithAccessId(user = "monitor")
   @Test
   void testEachItemOfDetailedClassificationReportWithStateFilter() throws Exception {
-    List<TaskState> states = Collections.singletonList(TaskState.READY);
+    List<TaskState> states = List.of(TaskState.READY);
     List<TimeIntervalColumnHeader> columnHeaders = getShortListOfColumnHeaders();
 
     DetailedClassificationReport report =
@@ -503,7 +500,7 @@ class ProvideDetailedClassificationReportAccTest extends AbstractReportAccTest {
   @WithAccessId(user = "monitor")
   @Test
   void testEachItemOfDetailedClassificationReportWithCategoryFilter() throws Exception {
-    List<String> categories = Arrays.asList("AUTOMATIC", "MANUAL");
+    List<String> categories = List.of("AUTOMATIC", "MANUAL");
     List<TimeIntervalColumnHeader> columnHeaders = getShortListOfColumnHeaders();
 
     DetailedClassificationReport report =
@@ -539,7 +536,7 @@ class ProvideDetailedClassificationReportAccTest extends AbstractReportAccTest {
   @WithAccessId(user = "monitor")
   @Test
   void testEachItemOfDetailedClassificationReportWithDomainFilter() throws Exception {
-    List<String> domains = Collections.singletonList("DOMAIN_A");
+    List<String> domains = List.of("DOMAIN_A");
     List<TimeIntervalColumnHeader> columnHeaders = getShortListOfColumnHeaders();
 
     DetailedClassificationReport report =
