@@ -6,7 +6,6 @@ import static org.assertj.core.api.Assertions.assertThatThrownBy;
 
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.Iterator;
 import java.util.List;
@@ -70,7 +69,7 @@ class ProvideTaskCustomFieldValueReportAccTest extends AbstractReportAccTest {
     Builder builder =
         MONITOR_SERVICE
             .createTaskCustomFieldValueReportBuilder(TaskCustomField.CUSTOM_1)
-            .classificationIdIn(Collections.singletonList("DOES NOT EXIST"));
+            .classificationIdIn(List.of("DOES NOT EXIST"));
     ThrowingCallable test =
         () -> {
           TaskCustomFieldValueReport report = builder.buildReport();
@@ -239,8 +238,7 @@ class ProvideTaskCustomFieldValueReportAccTest extends AbstractReportAccTest {
   @WithAccessId(user = "monitor")
   @Test
   void testEachItemOfCustomFieldValueReportWithWorkbasketFilter() throws Exception {
-    List<String> workbasketIds =
-        Collections.singletonList("WBI:000000000000000000000000000000000001");
+    List<String> workbasketIds = List.of("WBI:000000000000000000000000000000000001");
     List<TimeIntervalColumnHeader> columnHeaders = getShortListOfColumnHeaders();
 
     TaskCustomFieldValueReport report =
@@ -267,7 +265,7 @@ class ProvideTaskCustomFieldValueReportAccTest extends AbstractReportAccTest {
   @WithAccessId(user = "monitor")
   @Test
   void testEachItemOfCustomFieldValueReportWithStateFilter() throws Exception {
-    List<TaskState> states = Collections.singletonList(TaskState.READY);
+    List<TaskState> states = List.of(TaskState.READY);
     List<TimeIntervalColumnHeader> columnHeaders = getShortListOfColumnHeaders();
 
     TaskCustomFieldValueReport report =
@@ -294,7 +292,7 @@ class ProvideTaskCustomFieldValueReportAccTest extends AbstractReportAccTest {
   @WithAccessId(user = "monitor")
   @Test
   void testEachItemOfCustomFieldValueReportWithCategoryFilter() throws Exception {
-    List<String> categories = Arrays.asList("AUTOMATIC", "MANUAL");
+    List<String> categories = List.of("AUTOMATIC", "MANUAL");
     List<TimeIntervalColumnHeader> columnHeaders = getShortListOfColumnHeaders();
 
     TaskCustomFieldValueReport report =
@@ -321,7 +319,7 @@ class ProvideTaskCustomFieldValueReportAccTest extends AbstractReportAccTest {
   @WithAccessId(user = "monitor")
   @Test
   void testEachItemOfCustomFieldValueReportWithDomainFilter() throws Exception {
-    List<String> domains = Collections.singletonList("DOMAIN_A");
+    List<String> domains = List.of("DOMAIN_A");
     List<TimeIntervalColumnHeader> columnHeaders = getShortListOfColumnHeaders();
 
     TaskCustomFieldValueReport report =
