@@ -10,8 +10,6 @@ import static org.mockito.Mockito.verifyNoMoreInteractions;
 import static org.mockito.Mockito.when;
 
 import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -67,13 +65,12 @@ class ClassificationReportBuilderImplTest {
 
   @Test
   void testGetTotalNumbersOfClassificationReport() throws Exception {
-    final List<String> workbasketIds =
-        Collections.singletonList("WBI:000000000000000000000000000000000001");
-    final List<TaskState> states = Arrays.asList(TaskState.CLAIMED, TaskState.READY);
-    final List<String> categories = Collections.singletonList("EXTERN");
-    final List<String> domains = Collections.singletonList("DOMAIN_A");
-    final List<String> classificationIds = Collections.singletonList("L10000");
-    final List<String> excludedClassificationIds = Collections.singletonList("L20000");
+    final List<String> workbasketIds = List.of("WBI:000000000000000000000000000000000001");
+    final List<TaskState> states = List.of(TaskState.CLAIMED, TaskState.READY);
+    final List<String> categories = List.of("EXTERN");
+    final List<String> domains = List.of("DOMAIN_A");
+    final List<String> classificationIds = List.of("L10000");
+    final List<String> excludedClassificationIds = List.of("L20000");
     Map<TaskCustomField, String> customAttributeFilter = new HashMap<>();
     customAttributeFilter.put(TaskCustomField.CUSTOM_1, "Geschaeftsstelle A");
 
@@ -97,7 +94,7 @@ class ClassificationReportBuilderImplTest {
     when(classificationService.createClassificationQuery()).thenReturn(queryMock);
     when(queryMock.keyIn(any())).thenReturn(queryMock);
     when(queryMock.domainIn(any())).thenReturn(queryMock);
-    when(queryMock.list()).thenReturn(Collections.emptyList());
+    when(queryMock.list()).thenReturn(List.of());
 
     final ClassificationReport actualResult =
         cut.createClassificationReportBuilder()
@@ -131,18 +128,17 @@ class ClassificationReportBuilderImplTest {
 
   @Test
   void testGetClassificationReportWithReportLineItemDefinitions() throws Exception {
-    final List<String> workbasketIds =
-        Collections.singletonList("WBI:000000000000000000000000000000000001");
-    final List<TaskState> states = Arrays.asList(TaskState.CLAIMED, TaskState.READY);
-    final List<String> categories = Collections.singletonList("EXTERN");
-    final List<String> domains = Collections.singletonList("DOMAIN_A");
-    final List<String> classificationIds = Collections.singletonList("L10000");
-    final List<String> excludedClassificationIds = Collections.singletonList("L20000");
+    final List<String> workbasketIds = List.of("WBI:000000000000000000000000000000000001");
+    final List<TaskState> states = List.of(TaskState.CLAIMED, TaskState.READY);
+    final List<String> categories = List.of("EXTERN");
+    final List<String> domains = List.of("DOMAIN_A");
+    final List<String> classificationIds = List.of("L10000");
+    final List<String> excludedClassificationIds = List.of("L20000");
     Map<TaskCustomField, String> customAttributeFilter = new HashMap<>();
     customAttributeFilter.put(TaskCustomField.CUSTOM_1, "Geschaeftsstelle A");
 
     final List<TimeIntervalColumnHeader> columnHeaders =
-        Collections.singletonList(new TimeIntervalColumnHeader(0, 0));
+        List.of(new TimeIntervalColumnHeader(0, 0));
 
     final List<MonitorQueryItem> expectedResult = new ArrayList<>();
     MonitorQueryItem monitorQueryItem = new MonitorQueryItem();
@@ -164,7 +160,7 @@ class ClassificationReportBuilderImplTest {
     when(classificationService.createClassificationQuery()).thenReturn(queryMock);
     when(queryMock.keyIn(any())).thenReturn(queryMock);
     when(queryMock.domainIn(any())).thenReturn(queryMock);
-    when(queryMock.list()).thenReturn(Collections.emptyList());
+    when(queryMock.list()).thenReturn(List.of());
 
     final ClassificationReport actualResult =
         cut.createClassificationReportBuilder()
@@ -200,13 +196,12 @@ class ClassificationReportBuilderImplTest {
 
   @Test
   void testGetTotalNumbersOfDetailedClassificationReport() throws Exception {
-    final List<String> workbasketIds =
-        Collections.singletonList("WBI:000000000000000000000000000000000001");
-    final List<TaskState> states = Arrays.asList(TaskState.CLAIMED, TaskState.READY);
-    final List<String> categories = Collections.singletonList("EXTERN");
-    final List<String> domains = Collections.singletonList("DOMAIN_A");
-    final List<String> classificationIds = Collections.singletonList("L10000");
-    final List<String> excludedClassificationIds = Collections.singletonList("L20000");
+    final List<String> workbasketIds = List.of("WBI:000000000000000000000000000000000001");
+    final List<TaskState> states = List.of(TaskState.CLAIMED, TaskState.READY);
+    final List<String> categories = List.of("EXTERN");
+    final List<String> domains = List.of("DOMAIN_A");
+    final List<String> classificationIds = List.of("L10000");
+    final List<String> excludedClassificationIds = List.of("L20000");
     Map<TaskCustomField, String> customAttributeFilter = new HashMap<>();
     customAttributeFilter.put(TaskCustomField.CUSTOM_1, "Geschaeftsstelle A");
 
@@ -230,7 +225,7 @@ class ClassificationReportBuilderImplTest {
     when(classificationService.createClassificationQuery()).thenReturn(queryMock);
     when(queryMock.keyIn(any())).thenReturn(queryMock);
     when(queryMock.domainIn(any())).thenReturn(queryMock);
-    when(queryMock.list()).thenReturn(Collections.emptyList());
+    when(queryMock.list()).thenReturn(List.of());
 
     final DetailedClassificationReport actualResult =
         cut.createClassificationReportBuilder()
@@ -267,17 +262,16 @@ class ClassificationReportBuilderImplTest {
 
   @Test
   void testGetDetailedClassificationReportWithReportLineItemDefinitions() throws Exception {
-    final List<String> workbasketIds =
-        Collections.singletonList("WBI:000000000000000000000000000000000001");
-    final List<TaskState> states = Arrays.asList(TaskState.CLAIMED, TaskState.READY);
-    final List<String> categories = Collections.singletonList("EXTERN");
-    final List<String> domains = Collections.singletonList("DOMAIN_A");
-    final List<String> classificationIds = Collections.singletonList("L10000");
-    final List<String> excludedClassificationIds = Collections.singletonList("L20000");
+    final List<String> workbasketIds = List.of("WBI:000000000000000000000000000000000001");
+    final List<TaskState> states = List.of(TaskState.CLAIMED, TaskState.READY);
+    final List<String> categories = List.of("EXTERN");
+    final List<String> domains = List.of("DOMAIN_A");
+    final List<String> classificationIds = List.of("L10000");
+    final List<String> excludedClassificationIds = List.of("L20000");
     Map<TaskCustomField, String> customAttributeFilter = new HashMap<>();
     customAttributeFilter.put(TaskCustomField.CUSTOM_1, "Geschaeftsstelle A");
     final List<TimeIntervalColumnHeader> columnHeaders =
-        Collections.singletonList(new TimeIntervalColumnHeader(0, 0));
+        List.of(new TimeIntervalColumnHeader(0, 0));
 
     final List<DetailedMonitorQueryItem> expectedResult = new ArrayList<>();
     DetailedMonitorQueryItem detailedMonitorQueryItem = new DetailedMonitorQueryItem();
@@ -300,7 +294,7 @@ class ClassificationReportBuilderImplTest {
     when(classificationService.createClassificationQuery()).thenReturn(queryMock);
     when(queryMock.keyIn(any())).thenReturn(queryMock);
     when(queryMock.domainIn(any())).thenReturn(queryMock);
-    when(queryMock.list()).thenReturn(Collections.emptyList());
+    when(queryMock.list()).thenReturn(List.of());
 
     final DetailedClassificationReport actualResult =
         cut.createClassificationReportBuilder()
@@ -342,23 +336,20 @@ class ClassificationReportBuilderImplTest {
 
   @Test
   void testGetTaskIdsForSelectedItems() throws Exception {
-    final List<String> workbasketIds =
-        Collections.singletonList("WBI:000000000000000000000000000000000001");
-    final List<TaskState> states = Arrays.asList(TaskState.CLAIMED, TaskState.READY);
-    final List<String> categories = Collections.singletonList("EXTERN");
-    final List<String> domains = Collections.singletonList("DOMAIN_A");
-    final List<String> classificationIds = Collections.singletonList("L10000");
-    final List<String> excludedClassificationIds = Collections.singletonList("L20000");
+    final List<String> workbasketIds = List.of("WBI:000000000000000000000000000000000001");
+    final List<TaskState> states = List.of(TaskState.CLAIMED, TaskState.READY);
+    final List<String> categories = List.of("EXTERN");
+    final List<String> domains = List.of("DOMAIN_A");
+    final List<String> classificationIds = List.of("L10000");
+    final List<String> excludedClassificationIds = List.of("L20000");
     Map<TaskCustomField, String> customAttributeFilter = new HashMap<>();
     customAttributeFilter.put(TaskCustomField.CUSTOM_1, "Geschaeftsstelle A");
     final List<TimeIntervalColumnHeader> columnHeaders =
-        Collections.singletonList(new TimeIntervalColumnHeader(0, 0));
+        List.of(new TimeIntervalColumnHeader(0, 0));
 
-    final List<SelectedItem> selectedItems =
-        Collections.singletonList(new SelectedItem("EXTERN", null, 1, 5));
+    final List<SelectedItem> selectedItems = List.of(new SelectedItem("EXTERN", null, 1, 5));
 
-    final List<String> expectedResult =
-        Collections.singletonList("TKI:000000000000000000000000000000000001");
+    final List<String> expectedResult = List.of("TKI:000000000000000000000000000000000001");
     when(monitorMapperMock.getTaskIdsForSelectedItems(
             workbasketIds,
             states,
@@ -414,30 +405,28 @@ class ClassificationReportBuilderImplTest {
 
   @Test
   void testGetTaskIdsForSelectedItemsIsEmptyResult() throws Exception {
-    List<SelectedItem> selectedItems =
-        Collections.singletonList(new SelectedItem("GIBTSNED", null, 0, 0));
+    List<SelectedItem> selectedItems = List.of(new SelectedItem("GIBTSNED", null, 0, 0));
     List<String> result =
         cut.createClassificationReportBuilder()
-            .workbasketIdIn(Collections.singletonList("DieGibtsEhNed"))
+            .workbasketIdIn(List.of("DieGibtsEhNed"))
             .listTaskIdsForSelectedItems(selectedItems, TaskTimestamp.DUE);
     assertThat(result).isNotNull();
   }
 
   @Test
   void testListCustomAttributeValuesForCustomAttributeName() throws Exception {
-    final List<String> workbasketIds =
-        Collections.singletonList("WBI:000000000000000000000000000000000001");
-    final List<TaskState> states = Arrays.asList(TaskState.CLAIMED, TaskState.READY);
-    final List<String> categories = Collections.singletonList("EXTERN");
-    final List<String> domains = Collections.singletonList("DOMAIN_A");
-    final List<String> classificationIds = Collections.singletonList("L10000");
-    final List<String> excludedClassificationIds = Collections.singletonList("L20000");
+    final List<String> workbasketIds = List.of("WBI:000000000000000000000000000000000001");
+    final List<TaskState> states = List.of(TaskState.CLAIMED, TaskState.READY);
+    final List<String> categories = List.of("EXTERN");
+    final List<String> domains = List.of("DOMAIN_A");
+    final List<String> classificationIds = List.of("L10000");
+    final List<String> excludedClassificationIds = List.of("L20000");
     Map<TaskCustomField, String> customAttributeFilter = new HashMap<>();
     customAttributeFilter.put(TaskCustomField.CUSTOM_1, "Geschaeftsstelle A");
     final List<TimeIntervalColumnHeader> columnHeaders =
-        Collections.singletonList(new TimeIntervalColumnHeader(0, 0));
+        List.of(new TimeIntervalColumnHeader(0, 0));
 
-    final List<String> expectedResult = Collections.singletonList("Geschaeftsstelle A");
+    final List<String> expectedResult = List.of("Geschaeftsstelle A");
     when(monitorMapperMock.getCustomAttributeValuesForReport(
             workbasketIds,
             states,
@@ -482,7 +471,7 @@ class ClassificationReportBuilderImplTest {
   void testListCustomAttributeValuesForCustomAttributeNameIsEmptyResult() throws Exception {
     List<String> result =
         cut.createClassificationReportBuilder()
-            .workbasketIdIn(Collections.singletonList("DieGibtsGarantiertNed"))
+            .workbasketIdIn(List.of("DieGibtsGarantiertNed"))
             .listCustomAttributeValuesForCustomAttributeName(TaskCustomField.CUSTOM_10);
     assertThat(result).isNotNull();
   }
