@@ -3,8 +3,6 @@ package pro.taskana.workbasket.internal;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import javax.sql.DataSource;
 import org.junit.jupiter.api.BeforeAll;
@@ -29,11 +27,7 @@ import pro.taskana.workbasket.api.models.WorkbasketAccessItem;
 import pro.taskana.workbasket.api.models.WorkbasketSummary;
 import pro.taskana.workbasket.internal.models.WorkbasketImpl;
 
-/**
- * Integration Test for workbasketServiceImpl with connection management mode AUTOCOMMIT.
- *
- * @author EH
- */
+/** Integration Test for workbasketServiceImpl with connection management mode AUTOCOMMIT. */
 @ExtendWith(JaasExtension.class)
 class WorkbasketServiceImplIntAutocommitTest {
 
@@ -86,7 +80,7 @@ class WorkbasketServiceImplIntAutocommitTest {
         createTestWorkbasket(id2, "key2", "DOMAIN_A", "Hyperbasket", WorkbasketType.GROUP);
     workbasket2 = workBasketService.createWorkbasket(workbasket2);
     createWorkbasketWithSecurity(workbasket2, "user-1-1", true, true, false, false);
-    List<String> distTargets = Arrays.asList(workbasket0.getId(), workbasket1.getId());
+    List<String> distTargets = List.of(workbasket0.getId(), workbasket1.getId());
     Thread.sleep(SLEEP_TIME);
     workBasketService.setDistributionTargets(workbasket2.getId(), distTargets);
 
@@ -97,7 +91,7 @@ class WorkbasketServiceImplIntAutocommitTest {
     workbasket3 = workBasketService.createWorkbasket(workbasket3);
     createWorkbasketWithSecurity(workbasket3, "user-1-1", true, true, false, false);
 
-    List<String> newDistTargets = Collections.singletonList(workbasket3.getId());
+    List<String> newDistTargets = List.of(workbasket3.getId());
     Thread.sleep(SLEEP_TIME);
     workBasketService.setDistributionTargets(workbasket2.getId(), newDistTargets);
 
