@@ -4,7 +4,6 @@ import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static pro.taskana.common.test.rest.RestHelper.TEMPLATE;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Stream;
 import org.assertj.core.api.ThrowableAssert.ThrowingCallable;
@@ -22,14 +21,14 @@ import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.client.HttpClientErrorException;
 
-import pro.taskana.common.rest.Mapping;
+import pro.taskana.common.rest.RestEndpoints;
 import pro.taskana.common.rest.models.TaskanaPagedModel;
 import pro.taskana.common.test.rest.RestHelper;
 import pro.taskana.common.test.rest.TaskanaSpringBootTest;
 import pro.taskana.workbasket.rest.models.WorkbasketAccessItemRepresentationModel;
 
 /** Test WorkbasketAccessItemController. */
-@TestMethodOrder(MethodOrderer.Alphanumeric.class)
+@TestMethodOrder(MethodOrderer.MethodName.class)
 @TaskanaSpringBootTest
 class WorkbasketAccessItemControllerIntTest {
 
@@ -50,7 +49,7 @@ class WorkbasketAccessItemControllerIntTest {
   void testGetAllWorkbasketAccessItems() {
     ResponseEntity<TaskanaPagedModel<WorkbasketAccessItemRepresentationModel>> response =
         TEMPLATE.exchange(
-            restHelper.toUrl(Mapping.URL_WORKBASKET_ACCESS_ITEMS),
+            restHelper.toUrl(RestEndpoints.URL_WORKBASKET_ACCESS_ITEMS),
             HttpMethod.GET,
             restHelper.defaultRequest(),
             WORKBASKET_ACCESS_ITEM_PAGE_MODEL_TYPE);
@@ -63,7 +62,7 @@ class WorkbasketAccessItemControllerIntTest {
     String parameters = "?sort-by=workbasket-key&order=asc&page-size=9&access-ids=user-1-1&page=1";
     ResponseEntity<TaskanaPagedModel<WorkbasketAccessItemRepresentationModel>> response =
         TEMPLATE.exchange(
-            restHelper.toUrl(Mapping.URL_WORKBASKET_ACCESS_ITEMS) + parameters,
+            restHelper.toUrl(RestEndpoints.URL_WORKBASKET_ACCESS_ITEMS) + parameters,
             HttpMethod.GET,
             restHelper.defaultRequest(),
             WORKBASKET_ACCESS_ITEM_PAGE_MODEL_TYPE);
@@ -83,7 +82,7 @@ class WorkbasketAccessItemControllerIntTest {
     ThrowingCallable httpCall =
         () ->
             TEMPLATE.exchange(
-                restHelper.toUrl(Mapping.URL_WORKBASKET_ACCESS_ITEMS)
+                restHelper.toUrl(RestEndpoints.URL_WORKBASKET_ACCESS_ITEMS)
                     + "?sort-by=workbasket-key&order=asc&page=1&page-size=9&invalid=user-1-1",
                 HttpMethod.GET,
                 restHelper.defaultRequest(),
@@ -100,7 +99,7 @@ class WorkbasketAccessItemControllerIntTest {
     String parameters = "?sort-by=workbasket-key&order=asc&page=2&page-size=9&access-ids=user-1-1";
     ResponseEntity<TaskanaPagedModel<WorkbasketAccessItemRepresentationModel>> response =
         TEMPLATE.exchange(
-            restHelper.toUrl(Mapping.URL_WORKBASKET_ACCESS_ITEMS) + parameters,
+            restHelper.toUrl(RestEndpoints.URL_WORKBASKET_ACCESS_ITEMS) + parameters,
             HttpMethod.GET,
             restHelper.defaultRequest(),
             WORKBASKET_ACCESS_ITEM_PAGE_MODEL_TYPE);
@@ -130,7 +129,7 @@ class WorkbasketAccessItemControllerIntTest {
     String parameters = "?access-id=teamlead-2";
     ResponseEntity<Void> response =
         TEMPLATE.exchange(
-            restHelper.toUrl(Mapping.URL_WORKBASKET_ACCESS_ITEMS) + parameters,
+            restHelper.toUrl(RestEndpoints.URL_WORKBASKET_ACCESS_ITEMS) + parameters,
             HttpMethod.DELETE,
             restHelper.defaultRequest(),
             ParameterizedTypeReference.forType(Void.class));
@@ -141,7 +140,7 @@ class WorkbasketAccessItemControllerIntTest {
   @TestFactory
   Stream<DynamicTest> should_ReturnBadRequest_When_AccessIdIsInvalid() {
     List<String> accessIds =
-        Arrays.asList(
+        List.of(
             "cn=organisationseinheit ksc,cn=organisation,ou=test,o=taskana",
             "cn=monitor-users,cn=groups,ou=test,o=taskana",
             "user-1");
@@ -152,7 +151,7 @@ class WorkbasketAccessItemControllerIntTest {
           ThrowingCallable httpCall =
               () ->
                   TEMPLATE.exchange(
-                      restHelper.toUrl(Mapping.URL_WORKBASKET_ACCESS_ITEMS) + parameters,
+                      restHelper.toUrl(RestEndpoints.URL_WORKBASKET_ACCESS_ITEMS) + parameters,
                       HttpMethod.DELETE,
                       restHelper.defaultRequest(),
                       ParameterizedTypeReference.forType(Void.class));
